--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="project">
         <h3>Secure VPN Deployment</h3>
         <p>This project demonstrates the setup and configuration of a Virtual Private Network (VPN) using strongSwan, focusing on secure key exchange and encryption. The VPN is configured with AES-128 encryption and Diffie-Hellman Group 2 (1024-bit key), ensuring strong security standards. The setup involves installing and configuring strongSwan on a Linux system, generating and exchanging keys, editing the ipsec.conf and ipsec.secrets files for proper tunnel creation, and testing the VPN connection using ipsec status and ipsec up commands. The result is a successfully encrypted tunnel between two machines, providing a secured channel over an insecure network. This implementation can be extended for site-to-site VPNs or remote user access and lays the foundation for secure communication in enterprise environments.</p>
-        <a href="#" target="_blank" rel="noopener noreferrer">Download My Setup Guide</a>
+        <a href="https://docs.google.com/document/d/1hOGy5-ijhFuHTbKql6ogWVy_Ytluno0_/edit?usp=sharing&ouid=112310096988747447734&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">Download My Setup Guide</a>
       </div>
       <div class="project">
         <h3>AWS Deployment and Monitoring Automation using VS Code</h3>
