--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <p>his project outlines the deployment and automation of an AWS cloud-based architecture using Visual Studio Code and various AWS services. It involves setting up an EC2 instance, configuring AWS CLI credentials, and using IAM roles, S3 buckets, and CloudWatch for automation and monitoring. The developer writes scripts in VS Code to automate instance creation, upload logs to S3, and monitor system health metrics via CloudWatch. Security is managed using IAM policies and encrypted credentials. The goal is to streamline DevOps workflows by integrating development (VS Code) and cloud infrastructure (AWS). The project also includes real-time alerts using CloudWatch alarms, helping maintain uptime and resource efficiency. This setup is ideal for small-to-medium enterprise automation and serves as a prototype for scalable, cloud-native application management.
 
 </p>
-        <a href="#" target="_blank" rel="noopener noreferrer">Download My Deployment Tips</a>
+        <a href="https://docs.google.com/document/d/17kCVWR_ueVsgX1DkhX26AqRdCVuR-8VI/edit?usp=drive_link&ouid=112310096988747447734&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">Download My Deployment Tips</a>
       </div>
     </section>
     <section class="connect">
