--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KSV9K5DG8E"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-KSV9K5DG8E');
-</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Satvik Mishra | Personal Portfolio</title>
@@ -17,15 +8,15 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0f172a;
-      color: #f1f5f9;
+      background-color: #00BFB3;
+      color: #FF7F11;
       line-height: 1.6;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
     }
     header {
-      background-color: #1e293b;
+      background-color: #A0D2DB;
       padding: 2rem;
       text-align: center;
       box-shadow: 0 2px 10px rgba(0,0,0,0.7);
@@ -33,7 +24,7 @@
     header h1 {
       margin: 0;
       font-size: 2.8rem;
-      color: #38bdf8;
+      color: #0B4F6C;
       letter-spacing: 1.2px;
     }
     .degree {
@@ -55,7 +46,7 @@
       text-align: center;
     }
     h2 {
-      color: #7dd3fc;
+      color: #8C48C3;
       margin-top: 2.5rem;
       border-bottom: 2px solid #38bdf8;
       padding-bottom: 0.3rem;
@@ -65,7 +56,7 @@
     }
     p {
       font-size: 1.05rem;
-      color: #cbd5e1;
+      color: #777DA7;
       max-width: 700px;
       margin-left: auto;
       margin-right: auto;
@@ -127,7 +118,7 @@
       color: #64748b;
       border-top: 1px solid #334155;
       font-size: 0.9rem;
-      background-color: #1e293b;
+      background-color: #BEE7E8;
     }
     @media (max-width: 600px) {
       header h1 {
@@ -167,10 +158,18 @@
       <div class="project">
         <h3>AWS Deployment and Monitoring Automation using VS Code</h3>
         <p>his project outlines the deployment and automation of an AWS cloud-based architecture using Visual Studio Code and various AWS services. It involves setting up an EC2 instance, configuring AWS CLI credentials, and using IAM roles, S3 buckets, and CloudWatch for automation and monitoring. The developer writes scripts in VS Code to automate instance creation, upload logs to S3, and monitor system health metrics via CloudWatch. Security is managed using IAM policies and encrypted credentials. The goal is to streamline DevOps workflows by integrating development (VS Code) and cloud infrastructure (AWS). The project also includes real-time alerts using CloudWatch alarms, helping maintain uptime and resource efficiency. This setup is ideal for small-to-medium enterprise automation and serves as a prototype for scalable, cloud-native application management.
-
 </p>
         <a href="https://docs.google.com/document/d/17kCVWR_ueVsgX1DkhX26AqRdCVuR-8VI/edit?usp=drive_link&ouid=112310096988747447734&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">Download My Deployment Tips</a>
       </div>
+
+
+<div class="project">
+        <h3>Enterprise Data Architecture: Warehouse, Lake & Lakehouse Systems</h3>
+        <p>This project presents a comprehensive documentation of modern enterprise data architectures, including Data Warehouses, Data Lakes, and Lakehouses with Medallion Architecture. It covers foundational concepts, system design, AWS-based implementations, ETL pipelines, schema management, governance, and performance optimization. Whether you're a data engineer, analyst, or architect, this guide provides valuable insights into how raw data evolves across systems to support advanced analytics and machine learning. Ideal for cloud-native and scalable data platform design, this reference bridges theory with real-world application..</p>
+
+        <a href="https://docs.google.com/document/d/1lqbIEEYSq2h0BVyShUy4yJbcQVDzbucq/edit?usp=drive_link&ouid=112310096988747447734&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">Download My Setup Guide</a>
+      </div>
+
     </section>
     <section class="connect">
       <h2>Let's Connect</h2>
