--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       color: #94a3b8;
     }
     .connect a {
-      color: #38bdf8;
+      color: #004526;
       text-decoration: none;
       margin: 0 0.7rem;
       font-weight: 600;
