--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #00BFB3;
-      color: #FF7F11;
+      background: linear-gradient(135deg, #0F172A 0%, #1E293B 50%, #334155 100%);
+      color: #F8FAFC;
       line-height: 1.6;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
     }
     header {
-      background-color: #A0D2DB;
+      background-color: 	#1E293B;
       padding: 2rem;
       text-align: center;
       box-shadow: 0 2px 10px rgba(0,0,0,0.7);
@@ -24,7 +24,7 @@
     header h1 {
       margin: 0;
       font-size: 2.8rem;
-      color: #0B4F6C;
+      color: #38BDF8;
       letter-spacing: 1.2px;
     }
     .degree {
@@ -35,7 +35,7 @@
     header p {
       margin: 0.4rem 0;
       font-size: 1.1rem;
-      color: #94a3b8;
+      color: #CBD5E1;
       text-align: center;
     }
     main {
@@ -46,9 +46,9 @@
       text-align: center;
     }
     h2 {
-      color: #8C48C3;
+      color: #38BDF8;
       margin-top: 2.5rem;
-      border-bottom: 2px solid #38bdf8;
+      border-bottom: 2px solid #334155;
       padding-bottom: 0.3rem;
       font-weight: 600;
       font-size: 1.8rem;
@@ -56,14 +56,14 @@
     }
     p {
       font-size: 1.05rem;
-      color: #777DA7;
+      color: #CBD5E1;
       max-width: 700px;
       margin-left: auto;
       margin-right: auto;
     }
     .project {
-      background-color: #1e293b;
-      border-left: 4px solid #38bdf8;
+      background-color: #1E293B;
+      border-left: 4px solid 	#38BDF8;
       padding: 1.2rem 1rem;
       margin: 1.8rem auto;
       border-radius: 8px;
@@ -73,17 +73,17 @@
     }
     .project h3 {
       margin: 0 0 0.4rem 0;
-      color: #bae6fd;
+      color: 	#F8FAFC;
       font-size: 1.4rem;
     }
     .project p {
       margin: 0;
-      color: #d1d5db;
+      color: #CBD5E1;
     }
     .project a {
       display: inline-block;
       margin-top: 0.6rem;
-      color: #38bdf8;
+      color: #FACC15;
       text-decoration: none;
       font-weight: 600;
       transition: color 0.2s ease;
@@ -92,16 +92,16 @@
     }
     .project a:hover,
     .project a:focus {
-      color: #60a5fa;
+      color: #A855F7;
       text-decoration: underline;
     }
     .connect {
       margin-top: 3rem;
       font-size: 1.1rem;
-      color: #94a3b8;
+      color: #CBD5E1;
     }
     .connect a {
-      color: #004526;
+      color: #FACC15;
       text-decoration: none;
       margin: 0 0.7rem;
       font-weight: 600;
@@ -109,16 +109,16 @@
     }
     .connect a:hover,
     .connect a:focus {
-      color: #60a5fa;
+      color: #22D3EE;
       text-decoration: underline;
     }
     footer {
       text-align: center;
       padding: 1.5rem 0;
-      color: #64748b;
+      color: #CBD5E1;
       border-top: 1px solid #334155;
       font-size: 0.9rem;
-      background-color: #BEE7E8;
+      background-color: #1E293B;
     }
     @media (max-width: 600px) {
       header h1 {
@@ -169,6 +169,18 @@
 
         <a href="https://docs.google.com/document/d/1lqbIEEYSq2h0BVyShUy4yJbcQVDzbucq/edit?usp=drive_link&ouid=112310096988747447734&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">Download My Setup Guide</a>
       </div>
+
+<div class="project">
+        <h3>Beast Voice AI — Your voice. Your world. One command away.</h3>
+        <p>Beast Voice AI is a personal voice assistant I built from the ground up using Python. It listens, understands, and acts. Whether you want to search the web, play your favorite track, fetch the latest news, or even have a conversation — Beast responds.
+
+Behind the scenes, it blends powerful technologies like Google Speech Recognition, OpenAI’s GPT-3.5, NewsAPI, and PyAutoGUI to simulate a truly intelligent assistant. I also implemented features like YouTube ad skipping via screen detection and custom web automation.
+
+Beast was not just a project — it was my playground for integrating AI, NLP, automation, and real-time voice interaction. And it's only the beginning...</p>
+
+        <a href="" target="_blank" rel="noopener noreferrer">Github link</a>
+      </div>
+
 
     </section>
     <section class="connect">
