--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Behind the scenes, it blends powerful technologies like Google Speech Recognitio
 
 Beast was not just a project — it was my playground for integrating AI, NLP, automation, and real-time voice interaction. And it's only the beginning...</p>
 
-        <a href="" target="_blank" rel="noopener noreferrer">Github link</a>
+        <a href="https://github.com/auroraeye-dev/satvikm.github.io/blob/main/beast_ai.py" target="_blank" rel="noopener noreferrer">Github link</a>
       </div>
       <div class="project">
         <h3>AWS Deployment and Monitoring Automation using VS Code</h3>
