--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Beast was not just a project — it was my playground for integrating AI, NLP, a
         <h3>Enterprise Data Architecture: Warehouse, Lake & Lakehouse Systems</h3>
         <p>This project presents a comprehensive documentation of modern enterprise data architectures, including Data Warehouses, Data Lakes, and Lakehouses with Medallion Architecture. It covers foundational concepts, system design, AWS-based implementations, ETL pipelines, schema management, governance, and performance optimization. Whether you're a data engineer, analyst, or architect, this guide provides valuable insights into how raw data evolves across systems to support advanced analytics and machine learning. Ideal for cloud-native and scalable data platform design, this reference bridges theory with real-world application..</p>
 
-        <a href="https://docs.google.com/document/d/1lqbIEEYSq2h0BVyShUy4yJbcQVDzbucq/edit?usp=drive_link&ouid=112310096988747447734&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">Download My Setup Guide</a>
+        <a href="https://docs.google.com/document/d/1QdwE-WpYACq7WIdjP6QYzfQuzTOD6btC/edit?usp=sharing&ouid=112310096988747447734&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">Download My Setup Guide</a>
       </div>
 
 
