--- a/index.html
+++ b/index.html
@@ -1,202 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Satvik Mishra | Cybersecurity × Quant Finance</title>
-
-<script src="https://cdn.tailwindcss.com"></script>
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-
-<style>
-html { scroll-behavior: smooth; }
-
-body {
-  font-family: 'Inter', sans-serif;
-  background: #020617;
-  overflow-x: hidden;
-}
-
-h1,h2,h3,.font-heading {
-  font-family: 'Space Grotesk', sans-serif;
-}
-
-/* ===== GLASSMORPHISM ===== */
-.glass {
-  background: linear-gradient(
-    135deg,
-    rgba(255,255,255,0.08),
-    rgba(255,255,255,0.02)
-  );
-  backdrop-filter: blur(18px) saturate(160%);
-  -webkit-backdrop-filter: blur(18px) saturate(160%);
-  border: 1px solid rgba(255,255,255,0.18);
-  box-shadow:
-    0 8px 32px rgba(0,0,0,0.35),
-    inset 0 1px 0 rgba(255,255,255,0.15);
-  border-radius: 1.25rem;
-}
-
-.glass-hover {
-  transition: all 0.45s ease;
-}
-.glass-hover:hover {
-  transform: translateY(-6px) scale(1.015);
-  box-shadow:
-    0 20px 50px rgba(0,0,0,0.55),
-    0 0 25px rgba(56,189,248,0.15);
-}
-
-@keyframes slow-pulse {
-  0%,100% { transform: scale(1); opacity: 0.3; }
-  50% { transform: scale(1.1); opacity: 0.45; }
-}
-.animate-slow-pulse {
-  animation: slow-pulse 8s ease-in-out infinite;
-}
-@keyframes scan {
-  from { transform: translateY(-100%); }
-  to { transform: translateY(1000%); }
-}
-
-/* grain */
-body::before {
-  content:"";
-  position:fixed;
-  inset:0;
-  background-image:url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4'/%3E%3C/filter%3E%3Crect width='200' height='200' filter='url(%23n)' opacity='0.04'/%3E%3C/svg%3E");
-  pointer-events:none;
-  z-index:1;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Satvik Mishra | Personal Portfolio</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #0F172A 0%, #1E293B 50%, #334155 100%);
+      color: #F8FAFC;
+      line-height: 1.6;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    header {
+      background-color: 	#1E293B;
+      padding: 2rem;
+      text-align: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.7);
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.8rem;
+      color: #38BDF8;
+      letter-spacing: 1.2px;
+    }
+    .degree {
+      text-align: center;
+      width: 100%;
+      display: block;
+    }
+    header p {
+      margin: 0.4rem 0;
+      font-size: 1.1rem;
+      color: #CBD5E1;
+      text-align: center;
+    }
+    main {
+      flex: 1;
+      max-width: 900px;
+      margin: 2rem auto 3rem;
+      padding: 0 1rem;
+      text-align: center;
+    }
+    h2 {
+      color: #38BDF8;
+      margin-top: 2.5rem;
+      border-bottom: 2px solid #334155;
+      padding-bottom: 0.3rem;
+      font-weight: 600;
+      font-size: 1.8rem;
+      text-align: center;
+    }
+    p {
+      font-size: 1.05rem;
+      color: #CBD5E1;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .project {
+      background-color: #1E293B;
+      border-left: 4px solid 	#38BDF8;
+      padding: 1.2rem 1rem;
+      margin: 1.8rem auto;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+      max-width: 700px;
+      text-align: left;
+    }
+    .project h3 {
+      margin: 0 0 0.4rem 0;
+      color: 	#F8FAFC;
+      font-size: 1.4rem;
+    }
+    .project p {
+      margin: 0;
+      color: #CBD5E1;
+    }
+    .project a {
+      display: inline-block;
+      margin-top: 0.6rem;
+      color: #FACC15;
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.2s ease;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .project a:hover,
+    .project a:focus {
+      color: #A855F7;
+      text-decoration: underline;
+    }
+    .connect {
+      margin-top: 3rem;
+      font-size: 1.1rem;
+      color: #CBD5E1;
+    }
+    .connect a {
+      color: #FACC15;
+      text-decoration: none;
+      margin: 0 0.7rem;
+      font-weight: 600;
+      transition: color 0.2s ease;
+    }
+    .connect a:hover,
+    .connect a:focus {
+      color: #22D3EE;
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      padding: 1.5rem 0;
+      color: #CBD5E1;
+      border-top: 1px solid #334155;
+      font-size: 0.9rem;
+      background-color: #1E293B;
+    }
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+      main {
+        margin: 1rem;
+      }
+      .project {
+        max-width: 100%;
+      }
+    }
+  </style>
 </head>
-
-<body class="text-slate-200 selection:bg-amber-500/30">
-
-<!-- BACKGROUND -->
-<div class="fixed inset-0 pointer-events-none z-0 bg-[#020617]">
-  <div class="absolute top-[-10%] left-[10%] w-[600px] h-[600px] bg-sky-500/5 rounded-full blur-[140px] animate-slow-pulse"></div>
-  <div class="absolute bottom-[-10%] right-[10%] w-[700px] h-[700px] bg-amber-500/5 rounded-full blur-[160px] animate-slow-pulse"></div>
-  <div class="absolute inset-0 bg-[radial-gradient(#ffffff04_1px,transparent_1px)] [background-size:32px_32px]"></div>
-  <div class="absolute inset-0 bg-gradient-to-b from-transparent via-sky-500/5 to-transparent h-1 w-full animate-[scan_10s_linear_infinite]"></div>
-</div>
-
-<!-- NAVBAR -->
-<nav class="fixed top-0 w-full z-50 glass px-6 py-4 border-b border-white/10">
-  <div class="max-w-6xl mx-auto flex justify-between items-center">
-    <div class="text-2xl font-bold bg-gradient-to-r from-sky-400 to-indigo-500 bg-clip-text text-transparent">
-      SM.
+<body>
+  <header>
+    <h1>Satvik Mishra</h1>
+    <div class="degree">
+      B.Tech in Production and Industrial Engineering | Delhi Technological University (formerly Delhi College of Engineering)
     </div>
-    <div class="flex gap-8 text-sm text-slate-400">
-      <a href="#home" class="hover:text-sky-400">Home</a>
-      <a href="#vision" class="hover:text-sky-400">Vision</a>
-      <a href="#projects" class="hover:text-sky-400">Projects</a>
-      <a href="#contact" class="hover:text-sky-400">Connect</a>
-    </div>
-  </div>
-</nav>
+    <p>Location: Delhi, India</p>
+  </header>
+  <main>
+    <section>
+      <h2>My Vision</h2>
+      <p>
+        I envision delving into the deeper dimensions of cybersecurity and IT infrastructure, exploring complex systems and underlying principles that drive secure and scalable solutions. My aim is to design, build, and optimize robust architectures that not only protect but also enhance digital operations in today’s interconnected world. By combining my engineering foundation with continuous learning in modern technologies, I seek to contribute meaningfully to resilient and forward-looking tech ecosystems.
+      </p>
+    </section>
+    <section>
+      <h2>Systems I’ve Designed</h2>
+      <div class="project">
+        <h3>Secure VPN Deployment</h3>
+        <p>This project demonstrates the setup and configuration of a Virtual Private Network (VPN) using strongSwan, focusing on secure key exchange and encryption. The VPN is configured with AES-128 encryption and Diffie-Hellman Group 2 (1024-bit key), ensuring strong security standards. The setup involves installing and configuring strongSwan on a Linux system, generating and exchanging keys, editing the ipsec.conf and ipsec.secrets files for proper tunnel creation, and testing the VPN connection using ipsec status and ipsec up commands. The result is a successfully encrypted tunnel between two machines, providing a secured channel over an insecure network. This implementation can be extended for site-to-site VPNs or remote user access and lays the foundation for secure communication in enterprise environments.</p>
+        <a href="https://docs.google.com/document/d/1hOGy5-ijhFuHTbKql6ogWVy_Ytluno0_/edit?usp=sharing&ouid=112310096988747447734&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">Download My Setup Guide</a>
+      </div>
+<div class="project">
+        <h3>Beast Voice AI — Your voice. Your world. One command away.</h3>
+        <p>Beast Voice AI is a personal voice assistant I built from the ground up using Python. It listens, understands, and acts. Whether you want to search the web, play your favorite track, fetch the latest news, or even have a conversation — Beast responds.
 
-<!-- HERO -->
-<section id="home" class="pt-32 pb-24 px-6 text-center relative z-10">
-  <div class="max-w-4xl mx-auto space-y-10">
+Behind the scenes, it blends powerful technologies like Google Speech Recognition, OpenAI’s GPT-3.5, NewsAPI, and PyAutoGUI to simulate a truly intelligent assistant. I also implemented features like YouTube ad skipping via screen detection and custom web automation.
 
-    <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-amber-500/10 border border-amber-500/20 text-amber-400 text-xs font-bold uppercase">
-      <span class="w-2 h-2 bg-amber-500 rounded-full animate-pulse"></span>
-      Cybersecurity • Quant Finance • Fintech
-    </div>
+Beast was not just a project — it was my playground for integrating AI, NLP, automation, and real-time voice interaction. And it's only the beginning...</p>
 
-    <h1 class="text-5xl md:text-7xl font-bold">
-      Satvik
-      <span class="bg-gradient-to-r from-sky-400 via-amber-400 to-emerald-400 bg-clip-text text-transparent">
-        Mishra
-      </span>
-    </h1>
-
-    <p class="text-xl md:text-2xl text-slate-400 max-w-3xl mx-auto font-light leading-relaxed">
-      B.Tech in Production & Industrial Engineering from
-      <span class="text-slate-200">Delhi Technological University</span>.
-      Bridging the gap between
-      <span class="text-sky-400 font-medium">robust cybersecurity</span> and
-      <span class="text-amber-400 font-medium"> high-precision quantitative finance</span>.
-      I architect secure, scalable, and intelligent fintech infrastructures where
-      performance, security, and resilience coexist by design.
-    </p>
-
-    <div class="flex flex-col sm:flex-row gap-4 justify-center pt-6">
-      <a href="#projects"
-         class="px-8 py-3 bg-sky-600 hover:bg-sky-500 text-white font-semibold rounded-lg transition-all shadow-lg shadow-sky-500/20">
-        View My Systems
-      </a>
-      <a href="#contact"
-         class="px-8 py-3 glass glass-hover text-slate-200 font-semibold rounded-lg border border-amber-500/20">
-        Let’s Connect
-      </a>
-    </div>
-
-  </div>
-</section>
-
-<!-- PROJECTS -->
-<section id="projects" class="py-24 px-6 bg-slate-900/40 relative z-10">
-  <div class="max-w-6xl mx-auto">
-    <h2 class="text-4xl font-bold text-center mb-16">Secure Systems Portfolio</h2>
-
-    <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto">
-
-      <div class="glass glass-hover p-8">
-        <span class="text-sky-400 text-xs font-bold uppercase">Cybersecurity</span>
-        <h3 class="text-xl font-bold mt-4">Secure VPN Deployment</h3>
-        <p class="text-slate-400 text-sm mt-4 leading-relaxed">
-          Setup and configuration of a Virtual Private Network (VPN) using strongSwan,
-          focusing on secure key exchange and encryption. Configured with AES-128
-          encryption and Diffie-Hellman Group 2, ensuring strong security standards
-          for site-to-site tunnels.
-        </p>
+        <a href="https://github.com/auroraeye-dev/satvikm.github.io/blob/main/beast_ai.py" target="_blank" rel="noopener noreferrer">Github link</a>
+      </div>
+      <div class="project">
+        <h3>AWS Deployment and Monitoring Automation using VS Code</h3>
+        <p>his project outlines the deployment and automation of an AWS cloud-based architecture using Visual Studio Code and various AWS services. It involves setting up an EC2 instance, configuring AWS CLI credentials, and using IAM roles, S3 buckets, and CloudWatch for automation and monitoring. The developer writes scripts in VS Code to automate instance creation, upload logs to S3, and monitor system health metrics via CloudWatch. Security is managed using IAM policies and encrypted credentials. The goal is to streamline DevOps workflows by integrating development (VS Code) and cloud infrastructure (AWS). The project also includes real-time alerts using CloudWatch alarms, helping maintain uptime and resource efficiency. This setup is ideal for small-to-medium enterprise automation and serves as a prototype for scalable, cloud-native application management.
+</p>
+        <a href="https://docs.google.com/document/d/17kCVWR_ueVsgX1DkhX26AqRdCVuR-8VI/edit?usp=drive_link&ouid=112310096988747447734&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">Download My Deployment Tips</a>
       </div>
 
-      <div class="glass glass-hover p-8">
-        <span class="text-purple-400 text-xs font-bold uppercase">AI</span>
-        <h3 class="text-xl font-bold mt-4">Beast Voice AI</h3>
-        <p class="text-slate-400 text-sm mt-4 leading-relaxed">
-          A personal voice assistant built from the ground up using Python. It integrates
-          Google Speech Recognition, OpenAI’s GPT-3.5, and PyAutoGUI, featuring a
-          YouTube ad-skipper via real-time screen detection and automation routines.
-        </p>
+
+<div class="project">
+        <h3>Enterprise Data Architecture: Warehouse, Lake & Lakehouse Systems</h3>
+        <p>This project presents a comprehensive documentation of modern enterprise data architectures, including Data Warehouses, Data Lakes, and Lakehouses with Medallion Architecture. It covers foundational concepts, system design, AWS-based implementations, ETL pipelines, schema management, governance, and performance optimization. Whether you're a data engineer, analyst, or architect, this guide provides valuable insights into how raw data evolves across systems to support advanced analytics and machine learning. Ideal for cloud-native and scalable data platform design, this reference bridges theory with real-world application..</p>
+
+        <a href="https://docs.google.com/document/d/1QdwE-WpYACq7WIdjP6QYzfQuzTOD6btC/edit?usp=sharing&ouid=112310096988747447734&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer">Download My Setup Guide</a>
       </div>
 
-    </div>
-  </div>
-</section>
 
-<!-- CONNECT -->
-<section id="contact" class="py-32 px-6 relative z-10">
-  <div class="max-w-4xl mx-auto glass glass-hover p-12 text-center">
-    <h2 class="text-4xl font-bold mb-6">Connect for Infrastructure Strategy</h2>
-    <p class="text-slate-400 mb-12 text-lg font-light">
-      Collaborating on
-      <span class="text-sky-400">secure fintech</span>,
-      <span class="text-amber-400"> quantitative systems</span>, and
-      <span class="text-emerald-400"> scalable data infrastructure</span>.
-    </p>
-
-    <div class="flex flex-wrap justify-center gap-12 text-sm">
-      <a href="https://www.linkedin.com/in/satvik-mishra-aa18062aa"
-         class="text-sky-400 hover:underline">LinkedIn</a>
-      <a href="https://github.com/auroraeye-dev"
-         class="text-slate-200 hover:underline">GitHub</a>
-      <a href="mailto:contact@satvikmishra.com"
-         class="text-amber-400 hover:underline">Email</a>
-    </div>
-  </div>
-</section>
-
-<!-- FOOTER -->
-<footer class="py-12 text-center text-[10px] uppercase tracking-widest text-slate-500 border-t border-white/5">
-  © 2025 Satvik Mishra // Secure Architecture Portfolio
-</footer>
-
+    </section>
+    <section class="connect">
+      <h2>Let's Connect</h2>
+      <p>
+        <a href="https://www.linkedin.com/in/satvik-mishra-aa18062aa" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+        <a href="https://github.com/auroraeye-dev" target="_blank" rel="noopener noreferrer">GitHub</a> |
+        <a href="">Email Me</a>
+      </p>
+    </section>
+  </main>
+  <footer>
+    &copy; 2025 Satvik Mishra | Portfolio
+  </footer>
 </body>
 </html>
